syntax = "proto3";

package mathservice;

service MathService {
    rpc Add (AddRequest) returns (AddReply) {}
    rpc AddByStream (stream AddRequest) returns (stream AddReply) {}
}

message AddRequest{
    int32 A = 1;
    int32 B = 2;
}

message AddReply {
    int32 X=1;
}
